--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,9 +69,12 @@ a {
   }
 }
 
+img {
+  width: 100%;
+}
+
 /* Global Styles */
 .container {
-  width: 100%;
   margin: 0 auto;
   padding: 0 1rem;
 
